# LevelEditor

./: CMakeLists.txt  LICENSE  README.md  compile_commands.json
.cache/clangd/index/: FA6FreeSolidFontData.h.8FD73BB5529CC745.idx  IconsFontAwesome6.h.C672EB14268911DD.idx  imconfig.h.9D01024A06F75ABF.idx  imgui.cpp.76745B6D390A0964.idx  imgui.h.7840FFB9BEDD7E4D.idx  imgui_demo.cpp.9815C54C52EB1C2D.idx  imgui_draw.cpp.9460735E280AFB33.idx  imgui_impl_raylib.h.96CA1FCE77BF6B0C.idx  imgui_internal.h.A7EF3735FCECC3BF.idx  imgui_tables.cpp.8D1D927C97030E13.idx  imgui_widgets.cpp.27DE239577985B70.idx  imstb_rectpack.h.BFA96F9AA784A855.idx  imstb_textedit.h.E55CF2C190885B75.idx  imstb_truetype.h.4F0654DCE3342E31.idx  main.cpp.4CF8F46239318A7E.idx  (+2 more)
include/: camera.h  camera_property.h  collision.h  consts.h  cube.h  cube_property.h  force.h  game_data.h  game_object.h  game_state.h  gravity_force.h  level.h  level_editor.h  menu_bar.h  message.h  mlight.h  model3D.h  model3D_property.h  object.h  pause_state.h  play_state.h  property.h  registry.h  scene.h  state_machine.h  utils.h  view_object.h  widget_object.h
level_data/: level1.level  level1.level.backup
src/: camera.cpp  camera_property.cpp  collision.cpp  cube.cpp  cube_property.cpp  game_data.cpp  game_object.cpp  game_state.cpp  gravity_force.cpp  level.cpp  level_editor.cpp  main.cpp  menu_bar.cpp  message.cpp  mlight.cpp  model3D.cpp  model3D_property.cpp  object.cpp  pause_state.cpp  play_state.cpp  property.cpp  registry.cpp  scene.cpp  state_machine.cpp  utils.cpp  view_object.cpp  widget_object.cpp
